--- a/QLPM_BUS/QLPM_BUS.csproj
+++ b/QLPM_BUS/QLPM_BUS.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenhNhan_BUS.cs" />
+    <Compile Include="HoaDon_BUS.cs" />
     <Compile Include="NhanSu_BUS.cs" />
     <Compile Include="PhieuKham_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
