--- a/QLPM_DTO/QLPM_DTO.csproj
+++ b/QLPM_DTO/QLPM_DTO.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenhNhan_DTO.cs" />
-    <Compile Include="ChiTietPhieuKham_DTO.cs" />
+    <Compile Include="ChiTietHoaDon_DTO.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="HoaDon_DTO.cs" />
     <Compile Include="NhanSu_DTO.cs" />
