--- a/QLPM_GUI/QLPM_GUI.csproj
+++ b/QLPM_GUI/QLPM_GUI.csproj
@@ -33,8 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.52">
+      <HintPath>..\..\..\..\..\Downloads\Bunifu_UI_v1.52.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +68,18 @@
     <Compile Include="FrmHoaDon_GUI.Designer.cs">
       <DependentUpon>FrmHoaDon_GUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmInterfaceMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInterfaceMain.Designer.cs">
+      <DependentUpon>FrmInterfaceMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmLogin_GUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLogin_GUI.Designer.cs">
+      <DependentUpon>FrmLogin_GUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmNhanSu_GUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +106,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="FrmBenhNhan_GUI.resx">
       <DependentUpon>FrmBenhNhan_GUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,6 +115,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHoaDon_GUI.resx">
       <DependentUpon>FrmHoaDon_GUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInterfaceMain.resx">
+      <DependentUpon>FrmInterfaceMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmLogin_GUI.resx">
+      <DependentUpon>FrmLogin_GUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmNhanSu_GUI.resx">
       <DependentUpon>FrmNhanSu_GUI.cs</DependentUpon>
