--- a/QLPM_BUS/QLPM_BUS.csproj
+++ b/QLPM_BUS/QLPM_BUS.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenhNhan_BUS.cs" />
+    <Compile Include="CachDung_BUS.cs" />
     <Compile Include="ChiTietHoaDon_BUS.cs" />
+    <Compile Include="DonVi_BUS.cs" />
     <Compile Include="HoaDon_BUS.cs" />
     <Compile Include="NhanSu_BUS.cs" />
     <Compile Include="PhieuKham_BUS.cs" />
