--- a/QLPM_DTO/QLPM_DTO.csproj
+++ b/QLPM_DTO/QLPM_DTO.csproj
@@ -41,8 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenhNhan_DTO.cs" />
+    <Compile Include="CachDung_DTO.cs" />
     <Compile Include="ChiTietHoaDon_DTO.cs" />
     <Compile Include="DataProvider.cs" />
+    <Compile Include="DonVi_DTO.cs" />
     <Compile Include="HoaDon_DTO.cs" />
     <Compile Include="NhanSu_DTO.cs" />
     <Compile Include="PhieuKham_DTO.cs" />
