--- a/QLPM_GUI/QLPM_GUI.csproj
+++ b/QLPM_GUI/QLPM_GUI.csproj
@@ -33,12 +33,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bunifu_UI_v1.52">
-      <HintPath>..\..\..\..\..\Downloads\Bunifu_UI_v1.52.dll</HintPath>
+    <Reference Include="Bunifu_UI_v1.5.3">
+      <HintPath>..\..\..\..\..\Desktop\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +57,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="crpBCHDNgay.cs">
+      <DependentUpon>crpBCHDNgay.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="crpBCHDTong.cs">
+      <DependentUpon>crpBCHDTong.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="FormBaoCao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBaoCao.Designer.cs">
+      <DependentUpon>FormBaoCao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmBCHDNgay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBCHDNgay.Designer.cs">
+      <DependentUpon>FrmBCHDNgay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmBCHDTong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBCHDTong.Designer.cs">
+      <DependentUpon>FrmBCHDTong.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBenhNhan_GUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +168,23 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="crpBCHDNgay.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crpBCHDNgay.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="crpBCHDTong.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crpBCHDTong.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormBaoCao.resx">
+      <DependentUpon>FormBaoCao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmBCHDNgay.resx">
+      <DependentUpon>FrmBCHDNgay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmBCHDTong.resx">
+      <DependentUpon>FrmBCHDTong.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmBenhNhan_GUI.resx">
       <DependentUpon>FrmBenhNhan_GUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,6 +255,9 @@
       <Project>{BCAE37BF-76CD-4403-AD6C-167609C28015}</Project>
       <Name>QLPM_DTO</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
